Fix graphical error when menu got too small and language selector became new line. Fix issue where subtitle would not align with header in landing component

--- a/src/App.css
+++ b/src/App.css
@@ -184,7 +184,7 @@ hr {
 
 /* 48em = 768px */
 
-@media (min-width: 48em) {
+@media (min-width: 52em) {
     .header li {
         float: left;
     }
@@ -358,7 +358,7 @@ hr {
 #landing-text p {
     text-align: left;
     width: 80%;
-    padding-left: 1.7em;
+    padding-left: 5%;
 }
 
 #landing-image {
@@ -544,11 +544,12 @@ hr {
 }
 
 .item-cards > div > h2 {
-    padding-bottom: 10px;
+    padding-bottom: 4px;
 }
 
 .item-cards > div> h3 {
     padding-left: 15px;
+    padding-bottom: 5px;
 }
 
 .card-description {
